--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!--Footer-->
     <footer class="footer">
         <a class="logo-footer" href="./index.html"><span class="accent-logo">Web</span>Studio</a>
-        <address>
+        <address class="address-section">
             <a class="footer-address" href="https://www.google.com/maps/d/u/0/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
         <ul>
             
